some minor lookwise tweaks

--- a/blogs/index.html
+++ b/blogs/index.html
@@ -24,7 +24,7 @@ Blogs | bRuttaZz
 }
 </script>
 <link rel="stylesheet" href=".././assets/style.css">
-<link rel="shortcut icon" href=".././assets/images/avatar.jpg" type="image/x-icon">
+<!-- <link rel="shortcut icon" href=".././assets/images/avatar.jpg" type="image/x-icon"> -->
 <link href="https://cdn.jsdelivr.net/npm/@mdi/font@7.4.47/css/materialdesignicons.min.css" rel="stylesheet"
 crossorigin="anonymous">
 <script src=".././assets/js/index.js" type="module"></script>
@@ -112,7 +112,7 @@ myBlogs</span></div>
 <!-- content  -->
 <!-- ...  -->
 <!-- blogs tab  -->
-<h3 class="ps-1 blogs-heading">Some of my "fair enough" writings..</h3>
+<h4 class="ps-1 blogs-heading">Some of my "fair enough" writings..</h4>
 <div class="blogs-only-sec">
 <div class="blog-card">
 <a href="/blogs/life-is-no-a-function-of-time">
@@ -121,7 +121,7 @@ myBlogs</span></div>
 <p>
 Just a super simplified yet reasonable proof that Laplace&#39;s deamon can not be real.
 <div>
-<span class="badge">Last Modified: 17 Jun 2024</span>
+<span class="badge">Last Edited: 17 Jun 2024</span>
 </div>
 </p>
 </div>
@@ -133,7 +133,7 @@ Just a super simplified yet reasonable proof that Laplace&#39;s deamon can not b
 <p>
 If you ever plans to create a HTTP/WS reverse proxy, Of course python is not the answer. But if you insists so, I got some handy code snippets (I also instsisted the same, long back)
 <div>
-<span class="badge">Last Modified: 24 Jun 2024</span>
+<span class="badge">Last Edited: 24 Jun 2024</span>
 </div>
 </p>
 </div>
