--- a/projects.html
+++ b/projects.html
@@ -23,7 +23,7 @@ Projects | bRuttaZz
 "logo": "https://brutt.site/assets/images/avatar.jpg" , }
 </script>
 <link rel="stylesheet" href="./assets/style.css">
-<link rel="shortcut icon" href="./assets/images/avatar.jpg" type="image/x-icon">
+<!-- <link rel="shortcut icon" href="./assets/images/avatar.jpg" type="image/x-icon"> -->
 <link href="https://cdn.jsdelivr.net/npm/@mdi/font@7.4.47/css/materialdesignicons.min.css" rel="stylesheet"
 crossorigin="anonymous">
 <script src="./assets/js/index.js" type="module"></script>
@@ -111,19 +111,19 @@ myBlogs</span></div>
 <!-- content  -->
 <!-- ...  -->
 <!-- projects tab  -->
-<h3 class="ps-1">Some of my "fair enough" projects..</h3>
+<h4 class="ps-1 blogs-heading">Some of my "fair enough" projects..</h4>
 <div class="project-only-sec">
 <div class="project-card">
 <div class="vertical-align-center">
 <center>
 <a href="https://bruttazz.github.io/devc">
-<img width="130px" src="https://raw.githubusercontent.com/bRuttaZz/devc/main/assets/tad.png">
+<img width="100px" src="https://raw.githubusercontent.com/bRuttaZz/devc/main/assets/tad.png">
 </a>
 <br><b>devC</b>
 </center>
 </div>
 <div class="vertical-align-center">
-<p>A linux command line utility to build &#39;python venv&#39; like reusable virtualenv from Dockerfile/Containerfile or directly from a container image. Virtualenv for containers!</p>
+<p class="shortInfo">A linux command line utility to build &#39;python venv&#39; like reusable virtualenv from Dockerfile/Containerfile or directly from a container image. Virtualenv for containers!</p>
 <p>
 <a href="https://github.com/bruttazz/devc">
 <span class="source-link">source</span>
@@ -135,13 +135,13 @@ myBlogs</span></div>
 <div class="vertical-align-center">
 <center>
 <a href="https://github.com/bRuttaZz/sittytalky">
-<img width="130px" src="https://github.com/bRuttaZz/sittytalky/raw/DEV/data/icons/hicolor/scalable/apps/site.brutt.sittytalky.svg">
+<img width="100px" src="https://github.com/bRuttaZz/sittytalky/raw/DEV/data/icons/hicolor/scalable/apps/site.brutt.sittytalky.svg">
 </a>
 <br><b>SittyTalky</b>
 </center>
 </div>
 <div class="vertical-align-center">
-<p>SittyTalky: a primitive zero-configuration local network GNOME application purely written in python, originally intended for tinkering with my office mates over LAN!</p>
+<p class="shortInfo">SittyTalky: a primitive zero-configuration local network GNOME application purely written in python, originally intended for tinkering with my office mates over LAN!</p>
 <p>
 <a href="https://github.com/bRuttaZz/sittytalky">
 <span class="source-link">source</span>
@@ -153,13 +153,13 @@ myBlogs</span></div>
 <div class="vertical-align-center">
 <center>
 <a href="https://github.com/bRuttaZz/stmp">
-<img width="130px" src="https://github.com/bRuttaZz/stmp/raw/main/.assets/logo.png">
+<img width="100px" src="https://github.com/bRuttaZz/stmp/raw/main/.assets/logo.png">
 </a>
 <br><b>STMP</b>
 </center>
 </div>
 <div class="vertical-align-center">
-<p>STMP: Sitty Talky Messaging Protocol, a primitive zero-configuration local network protocol purely written in python, originally intended for tinkering with my office mates over LAN!</p>
+<p class="shortInfo">STMP: Sitty Talky Messaging Protocol, a primitive zero-configuration local network protocol purely written in python, originally intended for tinkering with my office mates over LAN!</p>
 <p>
 <a href="https://github.com/bRuttaZz/stmp">
 <span class="source-link">source</span>
@@ -171,13 +171,13 @@ myBlogs</span></div>
 <div class="vertical-align-center">
 <center>
 <a href="https://bruttazz.github.io/colbaking">
-<img width="130px" src="https://raw.githubusercontent.com/bRuttaZz/colbaking/main/game/preview.png">
+<img width="100px" src="https://raw.githubusercontent.com/bRuttaZz/colbaking/main/game/preview.png">
 </a>
 <br><b>Colbaking</b>
 </center>
 </div>
 <div class="vertical-align-center">
-<p>Nothing but an old school chrome-dino-game clone!</p>
+<p class="shortInfo">Nothing but an old school chrome-dino-game clone!</p>
 <p>
 <a href="https://github.com/bruttazz/colbaking">
 <span class="source-link">source</span>
