--- a/blogs/life-is-no-a-function-of-time.html
+++ b/blogs/life-is-no-a-function-of-time.html
@@ -28,7 +28,7 @@
     </script>
 
     <link rel="stylesheet" href=".././assets/style.css">
-    <link rel="shortcut icon" href=".././assets/images/avatar.jpg" type="image/x-icon">
+    <!-- <link rel="shortcut icon" href=".././assets/images/avatar.jpg" type="image/x-icon"> -->
     <link href="https://cdn.jsdelivr.net/npm/@mdi/font@7.4.47/css/materialdesignicons.min.css" rel="stylesheet"
         crossorigin="anonymous">
     <script src=".././assets/js/index.js" type="module"></script>
