--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ Agraj P Das (bRuttaZz)
 }
 </script>
 <link rel="stylesheet" href="./assets/style.css">
-<link rel="shortcut icon" href="./assets/images/avatar.jpg" type="image/x-icon">
+<!-- <link rel="shortcut icon" href="./assets/images/avatar.jpg" type="image/x-icon"> -->
 <link href="https://cdn.jsdelivr.net/npm/@mdi/font@7.4.47/css/materialdesignicons.min.css" rel="stylesheet"
 crossorigin="anonymous">
 <script src="./assets/js/index.js" type="module"></script>
@@ -126,25 +126,23 @@ myBlogs</span></div>
 </div>
 <div class="bio">
 <div class="bio-info">
-<span>dob</span><b> &nbsp28-10-2001 </b>
+<span class="badge">dob</span><b>28-10-2001</b>
 </div><div class="bio-info">
-<span>height</span><b> &nbspnot yet measured </b>
+<span class="badge">height</span><b>not yet measured</b>
 </div><div class="bio-info">
-<span>occupation</span><b> &nbspR&D Engineer, Pixdynamics Pvt Ltd </b>
+<span class="badge">working as</span><b>R&D Engineer, Pixdynamics Pvt Ltd</b>
 </div><div class="bio-info">
-<span>localization</span><b> &nbspKochi, Kerala </b>
+<span class="badge">locale</span><b>Kochi, Kerala</b>
 </div><div class="bio-info">
-<span>good at</span><b> &nbspWeb Technologies, Applied AI, System Design, Containers </b>
+<span class="badge">good at</span><b>Web Technologies, Applied AI, System Design, Containers</b>
 </div><div class="bio-info">
-<span>human languages</span><b> &nbspMalayalam, English </b>
+<span class="badge">human languages</span><b>Malayalam, English</b>
 </div><div class="bio-info">
-<span>computer languages</span><b> &nbspPython, JS, Go, C </b>
+<span class="badge">computer languages</span><b>Python, JS, Go, C</b>
 </div><div class="bio-info">
-<span>ask me about</span><b> &nbspSystem Design, Containers, Computer Networking </b>
+<span class="badge">ask me about</span><b>System Design, Containers, Computer Networking</b>
 </div><div class="bio-info">
-<span>pgp keys</span><b> &nbsp<a href="_source/writings/configs/pgp.key" >4546 EC98 5FA6 E6CD E09A 5114 18CD 31EE 87B1 AA02</a> </b>
-</div><div class="bio-info">
-<span>github</span><b> &nbsp<a href="https://github.com/bruttazz">bRuttaZz</a> </b>
+<span class="badge">gpg keys</span><b><a href="_source/writings/configs/pgp.key" >4546 EC98 5FA6 E6CD E09A 5114 18CD 31EE 87B1 AA02</a></b>
 </div>
 <!-- will be filled with about.me.json content  -->
 </div>
@@ -179,21 +177,22 @@ myBlogs</span></div>
 <!-- the projects section  -->
 <div class="project-sec">
 <b class="project-sec-heading">
-<span class="mdi mdi-pin"></span>
-some "good looking" projects
+<!-- <span class="mdi mdi-pin"></span> -->
+<span class="mdi mdi-chevron-double-right"></span>
+<span>some "good looking" projects</span>
 </b>
 <div class="project-cards">
 <div class="project-card">
 <div class="vertical-align-center">
 <center>
 <a href="https://bruttazz.github.io/devc">
-<img width="130px" src="https://raw.githubusercontent.com/bRuttaZz/devc/main/assets/tad.png">
+<img width="100px" src="https://raw.githubusercontent.com/bRuttaZz/devc/main/assets/tad.png">
 </a>
 <br><b>devC</b>
 </center>
 </div>
 <div class="vertical-align-center">
-<p>A linux command line utility to build &#39;python venv&#39; like reusable virtualenv from Dockerfile/Containerfile or directly from a container image. Virtualenv for containers!</p>
+<p class="shortInfo">A linux command line utility to build &#39;python venv&#39; like reusable virtualenv from Dockerfile/Containerfile or directly from a container image. Virtualenv for containers!</p>
 <p>
 <a href="https://github.com/bruttazz/devc">
 <span class="source-link">source</span>
@@ -205,13 +204,13 @@ some "good looking" projects
 <div class="vertical-align-center">
 <center>
 <a href="https://github.com/bRuttaZz/sittytalky">
-<img width="130px" src="https://github.com/bRuttaZz/sittytalky/raw/DEV/data/icons/hicolor/scalable/apps/site.brutt.sittytalky.svg">
+<img width="100px" src="https://github.com/bRuttaZz/sittytalky/raw/DEV/data/icons/hicolor/scalable/apps/site.brutt.sittytalky.svg">
 </a>
 <br><b>SittyTalky</b>
 </center>
 </div>
 <div class="vertical-align-center">
-<p>SittyTalky: a primitive zero-configuration local network GNOME application purely written in python, originally intended for tinkering with my office mates over LAN!</p>
+<p class="shortInfo">SittyTalky: a primitive zero-configuration local network GNOME application purely written in python, originally intended for tinkering with my office mates over LAN!</p>
 <p>
 <a href="https://github.com/bRuttaZz/sittytalky">
 <span class="source-link">source</span>
@@ -223,13 +222,13 @@ some "good looking" projects
 <div class="vertical-align-center">
 <center>
 <a href="https://github.com/bRuttaZz/stmp">
-<img width="130px" src="https://github.com/bRuttaZz/stmp/raw/main/.assets/logo.png">
+<img width="100px" src="https://github.com/bRuttaZz/stmp/raw/main/.assets/logo.png">
 </a>
 <br><b>STMP</b>
 </center>
 </div>
 <div class="vertical-align-center">
-<p>STMP: Sitty Talky Messaging Protocol, a primitive zero-configuration local network protocol purely written in python, originally intended for tinkering with my office mates over LAN!</p>
+<p class="shortInfo">STMP: Sitty Talky Messaging Protocol, a primitive zero-configuration local network protocol purely written in python, originally intended for tinkering with my office mates over LAN!</p>
 <p>
 <a href="https://github.com/bRuttaZz/stmp">
 <span class="source-link">source</span>
@@ -244,8 +243,9 @@ some "good looking" projects
 <!-- the blogs section  -->
 <div class="project-sec">
 <b class="project-sec-heading">
-<span class="mdi mdi-pin"></span>
-some "decent" blogs
+<!-- <span class="mdi mdi-pin"></span> -->
+<span class="mdi mdi-chevron-double-down"></span>
+<span> some "decent" blogs </span>
 </b>
 <div class="blog-cards">
 <div class="blog-card">
@@ -255,7 +255,7 @@ some "decent" blogs
 <p>
 Just a super simplified yet reasonable proof that Laplace&#39;s deamon can not be real.
 <div>
-<span class="badge">Last Modified: 17 Jun 2024</span>
+<span class="badge">Last Edited: 17 Jun 2024</span>
 </div>
 </p>
 </div>
@@ -267,7 +267,7 @@ Just a super simplified yet reasonable proof that Laplace&#39;s deamon can not b
 <p>
 If you ever insists to build a http reverse proxy in Python, I got some handy code snippets (I also instsisted for the same, long back)
 <div>
-<span class="badge">Last Modified: 24 Jun 2024</span>
+<span class="badge">Last Edited: 24 Jun 2024</span>
 </div>
 </p>
 </div>
