--- a/blogs/reverse-proxy-in-python.html
+++ b/blogs/reverse-proxy-in-python.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <meta name="description" content="If you ever plans to create a HTTP/WS reverse proxy, Of course python is not the answer. But if you insists so, I got some handy code snippets (I also instsisted the same, long back)">
+    <meta name="description" content="If you ever plans to create a HTTP/WS reverse proxy, Of course python is not the answer. But if you insists so, I got some handy code snippets (as I also insisted for the same, long back)">
     <meta name="keywords" content="reverse-proxy, python, gaetway, apigateway, proxy-in-python, ws-proxying, websocket">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="robots" content="index,follow">
@@ -35,13 +35,13 @@
     <meta property="og:locale" content="en_GB">
     <meta property="og:type" content="website">
     <meta property="og:title" content="Let&#39;s do the sin: Creating a reverse proxy in Python :)">
-    <meta property="og:description" content="If you ever plans to create a HTTP/WS reverse proxy, Of course python is not the answer. But if you insists so, I got some handy code snippets (I also instsisted the same, long back)">
+    <meta property="og:description" content="If you ever plans to create a HTTP/WS reverse proxy, Of course python is not the answer. But if you insists so, I got some handy code snippets (as I also insisted for the same, long back)">
     <meta property="og:url" content="https://brutt.site">
     <meta property="og:site_name" content="Let&#39;s do the sin: Creating a reverse proxy in Python :)">
     <meta property="og:image" content="https://brutt.site/src/writings/blogs/12.reverse-proxy-in-python/py.nginx.png">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Let&#39;s do the sin: Creating a reverse proxy in Python :)">
-    <meta name="twitter:description" content="If you ever plans to create a HTTP/WS reverse proxy, Of course python is not the answer. But if you insists so, I got some handy code snippets (I also instsisted the same, long back)">
+    <meta name="twitter:description" content="If you ever plans to create a HTTP/WS reverse proxy, Of course python is not the answer. But if you insists so, I got some handy code snippets (as I also insisted for the same, long back)">
     <meta name="twitter:site" content="@bRuttaZz">
     <meta name="twitter:creator" content="@bRuttaZz">
     <meta name="twitter:image" content="https://brutt.site/src/writings/blogs/12.reverse-proxy-in-python/py.nginx.png">
