--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@ Just a super simplified yet reasonable proof that Laplace&#39;s deamon can not b
 <div class="vertical-align-center">
 <b class="title">Let&#39;s do the sin: Creating a reverse proxy in Python :)</b>
 <p>
-If you ever insists to build a http reverse proxy in Python, I got some handy code snippets (I also instsisted for the same, long back)
+If you ever insists to build a http reverse proxy in Python, I got some handy code snippets (as I also insisted for the same, long back)
 <div>
 <span class="badge">Last Edited: 24 Jun 2024</span>
 </div>
