yeah again some ui improvements

--- a/index.html
+++ b/index.html
@@ -126,23 +126,23 @@ myBlogs</span></div>
 </div>
 <div class="bio">
 <div class="bio-info">
-<span class="badge">dob</span><b>28-10-2001</b>
+<span class="badge">dob</span>28-10-2001
 </div><div class="bio-info">
-<span class="badge">height</span><b>not yet measured</b>
+<span class="badge">height</span>not yet measured
 </div><div class="bio-info">
-<span class="badge">working as</span><b>R&D Engineer, Pixdynamics Pvt Ltd</b>
+<span class="badge">working as</span>R&D Engineer, Pixdynamics Pvt Ltd
 </div><div class="bio-info">
-<span class="badge">locale</span><b>Kochi, Kerala</b>
+<span class="badge">locale</span>Kochi, Kerala
 </div><div class="bio-info">
-<span class="badge">good at</span><b>Web Technologies, Applied AI, System Design, Containers</b>
+<span class="badge">good at</span>Web Technologies, Applied AI, System Design, Containers
 </div><div class="bio-info">
-<span class="badge">human languages</span><b>Malayalam, English</b>
+<span class="badge">human languages</span>Malayalam, English
 </div><div class="bio-info">
-<span class="badge">computer languages</span><b>Python, JS, Go, C</b>
+<span class="badge">computer languages</span>Python, JS, Go, C
 </div><div class="bio-info">
-<span class="badge">ask me about</span><b>System Design, Containers, Computer Networking</b>
+<span class="badge">ask me about</span>System Design, Containers, Computer Networking
 </div><div class="bio-info">
-<span class="badge">gpg keys</span><b><a href="_source/writings/configs/pgp.key" >4546 EC98 5FA6 E6CD E09A 5114 18CD 31EE 87B1 AA02</a></b>
+<span class="badge">gpg keys</span><a href="_source/writings/configs/pgp.key" >4546 EC98 5FA6 E6CD E09A 5114 18CD 31EE 87B1 AA02</a>
 </div>
 <!-- will be filled with about.me.json content  -->
 </div>
@@ -174,110 +174,34 @@ myBlogs</span></div>
 </p>
 </center>
 </div>
-<!-- the projects section  -->
-<div class="project-sec">
-<b class="project-sec-heading">
-<!-- <span class="mdi mdi-pin"></span> -->
-<span class="mdi mdi-chevron-double-right"></span>
-<span>some "good looking" projects</span>
-</b>
-<div class="project-cards">
-<div class="project-card">
-<div class="vertical-align-center">
-<center>
-<a href="https://bruttazz.github.io/devc">
-<img width="100px" src="https://raw.githubusercontent.com/bRuttaZz/devc/main/assets/tad.png">
-</a>
-<br><b>devC</b>
-</center>
-</div>
-<div class="vertical-align-center">
-<p class="shortInfo">A linux command line utility to build &#39;python venv&#39; like reusable virtualenv from Dockerfile/Containerfile or directly from a container image. Virtualenv for containers!</p>
-<p>
-<a href="https://github.com/bruttazz/devc">
-<span class="source-link">source</span>
-</a>
-<span class="license">license : GPLv3</span>
-</p>
-</div>
-</div><div class="project-card">
-<div class="vertical-align-center">
-<center>
-<a href="https://github.com/bRuttaZz/sittytalky">
-<img width="100px" src="https://github.com/bRuttaZz/sittytalky/raw/DEV/data/icons/hicolor/scalable/apps/site.brutt.sittytalky.svg">
-</a>
-<br><b>SittyTalky</b>
-</center>
-</div>
-<div class="vertical-align-center">
-<p class="shortInfo">SittyTalky: a primitive zero-configuration local network GNOME application purely written in python, originally intended for tinkering with my office mates over LAN!</p>
-<p>
-<a href="https://github.com/bRuttaZz/sittytalky">
-<span class="source-link">source</span>
-</a>
-<span class="license">license : GPLv3</span>
-</p>
-</div>
-</div><div class="project-card">
-<div class="vertical-align-center">
-<center>
-<a href="https://github.com/bRuttaZz/stmp">
-<img width="100px" src="https://github.com/bRuttaZz/stmp/raw/main/.assets/logo.png">
-</a>
-<br><b>STMP</b>
-</center>
-</div>
-<div class="vertical-align-center">
-<p class="shortInfo">STMP: Sitty Talky Messaging Protocol, a primitive zero-configuration local network protocol purely written in python, originally intended for tinkering with my office mates over LAN!</p>
-<p>
-<a href="https://github.com/bRuttaZz/stmp">
-<span class="source-link">source</span>
-</a>
-<span class="license">license : MIT</span>
-</p>
-</div>
-</div>
-<!-- project cards comes here  -->
-</div>
-</div>
-<!-- the blogs section  -->
-<div class="project-sec">
-<b class="project-sec-heading">
-<!-- <span class="mdi mdi-pin"></span> -->
-<span class="mdi mdi-chevron-double-down"></span>
-<span> some "decent" blogs </span>
-</b>
-<div class="blog-cards">
-<div class="blog-card">
-<a href="/blogs/life-is-no-a-function-of-time">
-<div class="vertical-align-center">
-<b class="title">Good thing is: Life is not a univariate function of time, or is it?</b>
-<p>
-Just a super simplified yet reasonable proof that Laplace&#39;s deamon can not be real.
-<div>
-<span class="badge">Last Edited: 17 Jun 2024</span>
-</div>
-</p>
-</div>
-</a>
-</div><div class="blog-card">
-<a href="/blogs/reverse-proxy-in-python">
-<div class="vertical-align-center">
-<b class="title">Let&#39;s do the sin: Creating a reverse proxy in Python :)</b>
-<p>
-If you ever insists to build a http reverse proxy in Python, I got some handy code snippets (as I also insisted for the same, long back)
-<div>
-<span class="badge">Last Edited: 24 Jun 2024</span>
-</div>
-</p>
-</div>
-</a>
-</div>
-<!-- blog cards comes here  -->
-</div>
+<div class="profile-about about-me bordered-about">
+<!-- a short description -->
+<p>Hi,
+<br>I&#39;m Agraj, a random lad from <a href="https://en.wikipedia.org/wiki/Kerala">Kerala</a>, often found online as <em>bRuttaZz</em>. I was a hard core science enthusiast from my primary school, a physics enthusiast to be specific. I&#39;m the kind of person who gets easily amazed by some simple, cool natural phenomena. </p>
+<p>It was back then, when I was doing some simulation for my physics mini project on <a href="https://en.wikipedia.org/wiki/Percolation_theory">Percolation Theory</a>, that I was drawn into the realm of computer science and programming in general.  Since then, I have been building some cool stuff to fulfill my temporary personal needs (at that time, also to impress my ex-girlfriend).</p>
+<p>As a netizen once famously said &quot;<em>If you got a creative itch, Programming can scratch that itch!</em>&quot;.</p>
+<p>I found programming as a good way to satisfy my instant-gratification-monkey (I mean my brain)! As of now, I still remain a programmer. Like any other passionate developer out there, I also love FOSS/FLOSS and am highly motivated by its philosophies. Thanks to GNU and Linux.</p>
+<details>
+<summary><b>More about me..</b></summary>
+<ul>
+<li>I use GNU/Linux as my daily driver</li>
+<li>I prefer GNOME over KDE ( solely personal :)</li>
+<li>I am a fan of federated systems like, <a href="https://en.wikipedia.org/wiki/ActivityPub">activityPub</a>, email, <a href="https://matrix.org/">matrix</a>, etc.</li>
+<li>I consider politics to be of great value and something that should be constantly discussed by all of us.</li>
+<li>I found myself more aligned with Left wing political ideologies.</li>
+<li>I strongly believe FOSS plays a much more significant role than it&#39;s praised for.</li>
+<li>I love music and sounds in general, and secretly try to learn guitar, violin, or at least a harmonica whenever I&#39;m free and motivated (which is a rare scenario).</li>
+<li>As a remaining of my old Physics degree, I possess <a href="https://en.wikipedia.org/wiki/David_J._Griffiths">David Griffith&#39;s</a>, <a href="https://www.cambridge.org/highereducation/books/introduction-to-quantum-mechanics/990799CA07A83FC5312402AF6860311E#overview">Introduction to Quantum Mechanics</a>, and tries to complete reading it whenever I&#39;m free and motivated (again, a rare scenario).</li>
+<li>In my sleep, I dream about becoming a kernel developer.</li>
+<li>I love writing scripts.</li>
+<li>I don&#39;t like God(s) but Humans. Among them, like Girls slightly more, especially those ones who talk about politics.</li>
+</ul>
+<p>( a lot of &#39;I&#39;s there )</p>
+<p>Let me stop here, this&#39;s way more than my Google-Portfolio.</p>
+</details>
 </div>
 <center>
-<a rel="me" href="https://fosstodon.org/@bRuttaZz" style="color: blue;">-</a>
+<a rel="me" href="https://fosstodon.org/@bRuttaZz" style="color: blue; display: none;">-</a>
 </center>
 <!-- content  -->
 </div>
