--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@ myBlogs</span></div>
 <span class="mdi mdi-mastodon"></span>
 </a><a href=https://www.instagram.com/bRuttaZz>
 <span class="mdi mdi-instagram"></span>
-</a><a href=https://www.linkedin.com/in/agraj-p-das-a656a423b>
+</a><a href=https://www.linkedin.com/in/agraj-p-das>
 <span class="mdi mdi-linkedin"></span>
 </a><a href=https://twitter.com/bruttazz_>
 <span class="mdi mdi-twitter"></span>
