--- a/projects.html
+++ b/projects.html
@@ -170,6 +170,24 @@ myBlogs</span></div>
 </div><div class="project-card">
 <div class="vertical-align-center">
 <center>
+<a href="https://pypi.org/project/serveM">
+<img width="100px" src="https://github.com/bRuttaZz/serveM/raw/main/.assets/logo.png">
+</a>
+<br><b>serveM</b>
+</center>
+</div>
+<div class="vertical-align-center">
+<p class="shortInfo">A simple Python script (package) to share my screen over a local network. (More like a code dump from another project of mine.)</p>
+<p>
+<a href="https://github.com/bRuttaZz/serveM">
+<span class="source-link">source</span>
+</a>
+<span class="license">license : GPLv3</span>
+</p>
+</div>
+</div><div class="project-card">
+<div class="vertical-align-center">
+<center>
 <a href="https://bruttazz.github.io/colbaking">
 <img width="100px" src="https://raw.githubusercontent.com/bRuttaZz/colbaking/main/game/preview.png">
 </a>
