update on cerve

--- a/projects.html
+++ b/projects.html
@@ -134,6 +134,24 @@ myBlogs</span></div>
 </div><div class="project-card">
 <div class="vertical-align-center">
 <center>
+<a href="https://github.com/bRuttaZz/cerve">
+<img width="100px" src="https://raw.githubusercontent.com/bRuttaZz/cerve/main/misc/logo.png">
+</a>
+<br><b>cerve</b>
+</center>
+</div>
+<div class="vertical-align-center">
+<p class="shortInfo">A multi-worker HTTP server written in C. Nothing too special, just another personal project of mine!</p>
+<p>
+<a href="https://github.com/bruttazz/cerve">
+<span class="source-link">source</span>
+</a>
+<span class="license">license : GPLv3</span>
+</p>
+</div>
+</div><div class="project-card">
+<div class="vertical-align-center">
+<center>
 <a href="https://github.com/bRuttaZz/sittytalky">
 <img width="100px" src="https://github.com/bRuttaZz/sittytalky/raw/DEV/data/icons/hicolor/scalable/apps/site.brutt.sittytalky.svg">
 </a>
