--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@ myBlogs</span></div>
 </div><div class="bio-info">
 <span class="badge">height</span>not yet measured
 </div><div class="bio-info">
-<span class="badge">working as</span>R&D Engineer, Pixdynamics Pvt Ltd
+<span class="badge">working as</span>Software Engineer @ KnowBe4
 </div><div class="bio-info">
 <span class="badge">locale</span>Kochi, Kerala
 </div><div class="bio-info">
@@ -180,7 +180,7 @@ myBlogs</span></div>
 <br>I&#39;m Agraj, a random lad from <a href="https://en.wikipedia.org/wiki/Kerala">Kerala</a>, often found online as <em>bRuttaZz</em>. I was a hard core science enthusiast from my primary school, a physics enthusiast to be specific. I&#39;m the kind of person who gets easily amazed by some simple, cool natural phenomena. </p>
 <p>It was back then, when I was doing some simulation for my physics mini project on <a href="https://en.wikipedia.org/wiki/Percolation_theory">Percolation Theory</a>, that I was drawn into the realm of computer science and programming in general.  Since then, I have been building some cool stuff to fulfill my temporary personal needs (at that time, also to impress my ex-girlfriend).</p>
 <p>As a netizen once famously said &quot;<em>If you got a creative itch, Programming can scratch that itch!</em>&quot;.</p>
-<p>I found programming as a good way to satisfy my instant-gratification-monkey (I mean my brain)! As of now, I still remain a programmer. Like any other passionate developer out there, I also love FOSS/FLOSS and am highly motivated by its philosophies. Thanks to GNU and Linux.</p>
+<p>I found programming as a good way to satisfy my instant-gratification-monkey (I mean my brain)! Like any other passionate developer out there, I also love FOSS/FLOSS and am highly motivated by its philosophies. Thanks to GNU and Linux.</p>
 <details>
 <summary><b>More about me..</b></summary>
 <ul>
