just some random updates

--- a/projects.html
+++ b/projects.html
@@ -119,7 +119,9 @@ myBlogs</span></div>
 <a href="https://bruttazz.github.io/devc">
 <img width="100px" src="https://raw.githubusercontent.com/bRuttaZz/devc/main/assets/tad.png">
 </a>
-<br><b>devC</b>
+<div class="project-img-sec">
+<b>devC</b>
+</div>
 </center>
 </div>
 <div class="vertical-align-center">
@@ -131,13 +133,16 @@ myBlogs</span></div>
 <span class="license">license : GPLv3</span>
 </p>
 </div>
-</div><div class="project-card">
+</div>
+<div class="project-card">
 <div class="vertical-align-center">
 <center>
 <a href="https://github.com/bRuttaZz/cerve">
 <img width="100px" src="https://raw.githubusercontent.com/bRuttaZz/cerve/main/misc/logo.png">
 </a>
-<br><b>cerve</b>
+<div class="project-img-sec">
+<b>cerve</b>
+</div>
 </center>
 </div>
 <div class="vertical-align-center">
@@ -149,13 +154,16 @@ myBlogs</span></div>
 <span class="license">license : GPLv3</span>
 </p>
 </div>
-</div><div class="project-card">
+</div>
+<div class="project-card">
 <div class="vertical-align-center">
 <center>
 <a href="https://github.com/bRuttaZz/sittytalky">
 <img width="100px" src="https://github.com/bRuttaZz/sittytalky/raw/DEV/data/icons/hicolor/scalable/apps/site.brutt.sittytalky.svg">
 </a>
-<br><b>SittyTalky</b>
+<div class="project-img-sec">
+<b>SittyTalky</b>
+</div>
 </center>
 </div>
 <div class="vertical-align-center">
@@ -167,13 +175,16 @@ myBlogs</span></div>
 <span class="license">license : GPLv3</span>
 </p>
 </div>
-</div><div class="project-card">
+</div>
+<div class="project-card">
 <div class="vertical-align-center">
 <center>
 <a href="https://github.com/bRuttaZz/stmp">
 <img width="100px" src="https://github.com/bRuttaZz/stmp/raw/main/.assets/logo.png">
 </a>
-<br><b>STMP</b>
+<div class="project-img-sec">
+<b>STMP</b>
+</div>
 </center>
 </div>
 <div class="vertical-align-center">
@@ -185,13 +196,16 @@ myBlogs</span></div>
 <span class="license">license : MIT</span>
 </p>
 </div>
-</div><div class="project-card">
+</div>
+<div class="project-card">
 <div class="vertical-align-center">
 <center>
 <a href="https://pypi.org/project/serveM">
 <img width="100px" src="https://github.com/bRuttaZz/serveM/raw/main/.assets/logo.png">
 </a>
-<br><b>serveM</b>
+<div class="project-img-sec">
+<b>serveM</b>
+</div>
 </center>
 </div>
 <div class="vertical-align-center">
@@ -203,13 +217,16 @@ myBlogs</span></div>
 <span class="license">license : GPLv3</span>
 </p>
 </div>
-</div><div class="project-card">
+</div>
+<div class="project-card">
 <div class="vertical-align-center">
 <center>
 <a href="https://bruttazz.github.io/colbaking">
 <img width="100px" src="https://raw.githubusercontent.com/bRuttaZz/colbaking/main/game/preview.png">
 </a>
-<br><b>Colbaking</b>
+<div class="project-img-sec">
+<b>Colbaking</b>
+</div>
 </center>
 </div>
 <div class="vertical-align-center">
@@ -219,6 +236,48 @@ myBlogs</span></div>
 <span class="source-link">source</span>
 </a>
 <span class="license">license : MIT</span>
+</p>
+</div>
+</div>
+<div class="project-card">
+<div class="vertical-align-center">
+<center>
+<a href="https://github.com/bruttazz/kart-ksrtc">
+<img width="100px" src="https://github.com/bRuttaZz/kart-ksrtc/blob/main/blends/cartoonish_with_vasu/icon.png?raw=true">
+</a>
+<div class="project-img-sec">
+<b>KSRTC (STK Kart)</b>
+</div>
+</center>
+</div>
+<div class="vertical-align-center">
+<p class="shortInfo">Nothing special, just a binary dump (🙃) of a KSRTC (Kerala State Road Transport Corporation) Kart developed for SuperTuxkart!</p>
+<p>
+<a href="https://github.com/bruttazz/kart-ksrtc">
+<span class="source-link">source</span>
+</a>
+<span class="license">license : CC0 1.0</span>
+</p>
+</div>
+</div>
+<div class="project-card">
+<div class="vertical-align-center">
+<center>
+<a href="https://pypi.org/project/tty-html/">
+<img width="100px" src="https://raw.githubusercontent.com/bRuttaZz/tty-html/refs/heads/main/misc/logo.png">
+</a>
+<div class="project-img-sec">
+<b>[Pre]tty-HTML</b>
+</div>
+</center>
+</div>
+<div class="vertical-align-center">
+<p class="shortInfo">[Pre]tty-html: (the logo reads as: &#39;pookie html&#39;) A minimalist python script to pretty print html docs to unix terminal. </p>
+<p>
+<a href="https://github.com/bRuttaZz/tty-html">
+<span class="source-link">source</span>
+</a>
+<span class="license">license : GPLv3</span>
 </p>
 </div>
 </div>
