--- a/index.html
+++ b/index.html
@@ -126,11 +126,11 @@ myBlogs</span></div>
 </div>
 <div class="bio">
 <div class="bio-info">
-<span class="badge">dob</span>28-10-2001
+<span class="badge">born</span>21.09 yrs Before Chatgpt
 </div><div class="bio-info">
 <span class="badge">height</span>not yet measured
 </div><div class="bio-info">
-<span class="badge">working as</span>Software Engineer @ KnowBe4
+<span class="badge">working as</span>Software Engineer @&nbsp<a href="https://www.knowbe4.com">KnowBe4</a>
 </div><div class="bio-info">
 <span class="badge">locale</span>Kochi, Kerala
 </div><div class="bio-info">
@@ -138,7 +138,7 @@ myBlogs</span></div>
 </div><div class="bio-info">
 <span class="badge">human languages</span>Malayalam, English
 </div><div class="bio-info">
-<span class="badge">computer languages</span>Python, JS, Go, C
+<span class="badge">computer languages</span>Python, JS, C, Go
 </div><div class="bio-info">
 <span class="badge">ask me about</span>System Design, Containers, Computer Networking
 </div><div class="bio-info">
@@ -207,6 +207,6 @@ myBlogs</span></div>
 </div>
 </body>
 <footer>
-<center class="copyright">© 2024 Agraj P Das</center>
+<center class="copyright">© 2025 Agraj P Das</center>
 </footer>
 </html>
