--- a/blogs/index.html
+++ b/blogs/index.html
@@ -20,7 +20,7 @@ Blogs | bRuttaZz
 "name": "Blogs | bRuttaZz",
 "url": "https://brutt.site/blogs",
 "description": "Blogs of bRuttaZz (Agraj P Das)! List of some of my blog posts..",
-"logo": "https://brutt.site/assets/images/avatar.jpg",
+"logo": "https://brutt.site/assets/images/avatar.jpg"
 }
 </script>
 <link rel="stylesheet" href=".././assets/style.css">
