--- a/blogs/life-is-no-a-function-of-time.html
+++ b/blogs/life-is-no-a-function-of-time.html
@@ -23,7 +23,7 @@
         "name": title,
         "url": url,
         "description": description,
-        "logo": "https://brutt.site/assets/images/avatar.jpg",
+        "logo": "https://brutt.site/assets/images/avatar.jpg"
     }
     </script>
 
@@ -124,6 +124,7 @@
         <!-- content  -->
         <!-- ...  -->
 
+
     <!-- blog portion  -->
     <div class="blog-content">
         <div>
@@ -175,7 +176,7 @@ So,</p>
 <blockquote>
 <p>(Leave me alone! I'm tired of these questions.)</p>
 </blockquote>
-</body></html>    
+</body></html>
     </div>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@11.9.0/build/styles/default.min.css">
     <style>
@@ -193,3 +194,4 @@ So,</p>
         <center class="copyright">© 2025 Agraj P Das</center>
     </footer>
 </html>
+
