--- a/blogs/reverse-proxy-in-python.html
+++ b/blogs/reverse-proxy-in-python.html
@@ -23,7 +23,7 @@
         "name": title,
         "url": url,
         "description": description,
-        "logo": "https://brutt.site/assets/images/avatar.jpg",
+        "logo": "https://brutt.site/assets/images/avatar.jpg"
     }
     </script>
 
@@ -123,6 +123,7 @@
 
         <!-- content  -->
         <!-- ...  -->
+
 
     <!-- blog portion  -->
     <div class="blog-content">
@@ -411,7 +412,7 @@ I am going with <code>uvicorn</code> for this example. Feel free to choose any o
 <blockquote>
 <p>PFA the complete code over <a href="https://gist.github.com/bRuttaZz/a16e0b7d0c604aa7f13c1cb6efbc0cfa">here</a></p>
 </blockquote>
-</body></html>    
+</body></html>
     </div>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@11.9.0/build/styles/default.min.css">
     <style>
@@ -429,3 +430,4 @@ I am going with <code>uvicorn</code> for this example. Feel free to choose any o
         <center class="copyright">© 2025 Agraj P Das</center>
     </footer>
 </html>
+
