--- a/index.html
+++ b/index.html
@@ -22,7 +22,6 @@ Agraj P Das (bRuttaZz)
 "description": "Agraj P Das (@bRUttaZz)! A software enthusiast. Find my projects and connection info over here!",
 "logo": "https://brutt.site/assets/images/avatar.jpg",
 "sameAs": [
-"https://twitter.com/bruttazz_",
 "https://github.com/bruttazz",
 "https://instagram.com/bruttazz",
 "https://fosstodon.org/@bRUttaZz"
@@ -160,16 +159,14 @@ myBlogs</span></div>
 </div>
 <center>
 <p class="social-media-icons">
-<a href=https://github.com/bruttazz>
-<span class="mdi mdi-github"></span>
-</a><a href=https://fosstodon.org/@bRuttaZz>
+<a href=https://fosstodon.org/@bRuttaZz>
 <span class="mdi mdi-mastodon"></span>
+</a><a href=https://github.com/bruttazz>
+<span class="mdi mdi-github"></span>
 </a><a href=https://www.instagram.com/bRuttaZz>
 <span class="mdi mdi-instagram"></span>
 </a><a href=https://www.linkedin.com/in/agraj-p-das>
 <span class="mdi mdi-linkedin"></span>
-</a><a href=https://twitter.com/bruttazz_>
-<span class="mdi mdi-twitter"></span>
 </a>
 </p>
 </center>
