--- a/projects.html
+++ b/projects.html
@@ -20,7 +20,7 @@ Projects | bRuttaZz
 "name": "Projects | bRuttaZz" ,
 "url" : "https://brutt.site/projects" ,
 "description": "Projects of bRuttaZz (Agraj P Das)! List of some of my 'just for fun' projects.." ,
-"logo": "https://brutt.site/assets/images/avatar.jpg" , }
+"logo": "https://brutt.site/assets/images/avatar.jpg" }
 </script>
 <link rel="stylesheet" href="./assets/style.css">
 <!-- <link rel="shortcut icon" href="./assets/images/avatar.jpg" type="image/x-icon"> -->
