--- a/new/index.html
+++ b/new/index.html
@@ -210,7 +210,7 @@
             <!-- Minimal Page Navigation (Centered) -->
             <div class="nav-center-wrapper">
                 <nav>
-                    <a href="#" class="nav-link">me</a>
+                    <a href="#" class="nav-link">about</a>
                     <a href="#" class="nav-link">projects</a>
                     <a href="#" class="nav-link">blogs</a>
                 </nav>
@@ -226,23 +226,21 @@
             <div class="text-container">
                 <img class="profile-img" src="./me-pixelated.jpg" />
 
-                <p class="greeting">Hi, me Agraj P Das.</p>
+                <p class="greeting">Hi, I'm Agraj P Das.</p>
                 <p class="tagline">
-                    I build software stuffs!
+                    I build software stuff!
                     <br />
-                    <b>gpg keys</b>:
+                    <b>GPG keys</b>:
                     <a href="#gpg-keys" class="link-text link-text-text">
                         33B2 D900 0DC9 C4EB EA99 CAE7 64C4 AB4F DCA2 F4B5
                     </a>
-                    <!--yet another software enthusiast, FOSS lover and
-                    philanthropist!-->
                 </p>
 
                 <p class="paragraph">
                     Broadly speaking, I'm just a random lad from Kerala, born
-                    about 21.10411 years BC (before ChatGPT 3.5), often found
-                    online as <i>bRuttaZz</i>, currently working as a Software
-                    Engineer at
+                    about 21.104 years BC (before ChatGPT 3.5 release), often
+                    found online as <i>bRuttaZz</i>, currently working as a
+                    Software Engineer at
                     <a
                         href="https://knowbe4.com?ref=brutt.site"
                         class="link-text"
